--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 
-    <title>Repsonsive website</title>
+    <title>PetricaZPC</title>
 </head>
 <body>
     <div class="total">
