--- a/discordserver.html
+++ b/discordserver.html
@@ -12,14 +12,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 
-    <title>Repsonsive website</title>
+    <title>PetricaZPC</title>
 </head>
 <body>
     <div class="total">
         <div class="navbar">
             <img src="logo.png" class="logo">
             <ul id="menuList">
-                <li><a href="home.html" class="hvr-bounce-out">Home</a></li>
+                <li><a href="index.html" class="hvr-bounce-out">Home</a></li>
             </ul>
             <img src="menuicon.png" class="menu-icon" onclick="togglemenu()">
         </div>
