--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="navbar">
             <img src="logo.png" class="logo">
             <ul id="menuList">
-                <li><a href="home.html" class="hvr-bounce-out">Home</a></li>
+                <li><a href="index.html" class="hvr-bounce-out">Home</a></li>
                 <li><a href="socialmedia.html" class="hvr-bounce-out">Social Media
                 </a></li>
                 <li><a href="discordserver.html" class="hvr-bounce-out">Discord Server</a></li>
